--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,14 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.pyplot import figure\n",
-    "\n"
+    "import operator\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>1 Part(a)</h1>"
    ]
   },
   {
@@ -127,275 +134,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_list = []\n",
+    "outgoing = defaultdict(lambda: 0)\n",
+    "incoming = defaultdict(lambda: 0)\n",
+    "# num_dict\n",
+    "for root, dirs, files in os.walk(directory):\n",
+    "    for file in files:\n",
+    "        if file.endswith(\".txt\"):\n",
+    "            name = os.path.join(root,file)\n",
+    "            if name[-17:] == '/Calllog Dump.txt':\n",
+    "                log_list.append(name)\n",
+    "\n",
+    "                \n",
+    "for files in log_list:\n",
+    "    f = open(files)\n",
+    "    var = ''.join(f.readlines()).split(\"\\n\")\n",
+    "    for idx, val in enumerate(var):\n",
+    "        if val.startswith(\"Number\"):\n",
+    "            if var[idx+3].strip(\"\\n\").split(\": \")[1].lower() == 'outgoing':\n",
+    "                country = f.name.split(\"/\")[2].split(\" \")[0]\n",
+    "                index = (var[idx].strip(\"\\n\").split(\": \")[1],var[idx+1].strip(\"\\n\").split(\": \")[1].lower(),country)\n",
+    "                outgoing[index] += 1\n",
+    "            if var[idx+3].strip(\"\\n\").split(\": \")[1].lower() == 'incoming':\n",
+    "                country = f.name.split(\"/\")[2].split(\" \")[0]\n",
+    "                index = (var[idx].strip(\"\\n\").split(\": \")[1],var[idx+1].strip(\"\\n\").split(\": \")[1].lower(),country)\n",
+    "                incoming[index] += 1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "Contacts Dump.txt\n",
-      "/Phone number.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "/IS1/ifconfig.txt\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "1/geolocation.txt\n",
-      "/IS1/ifconfig.txt\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "nfig, ip data.txt\n",
-      "/IS1/ifconfig.txt\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "/IS1/ifconfig.txt\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "/IS1/ifconfig.txt\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "7/geolocation.txt\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "5/geolocation.txt\n",
-      "/IS5/ifconfig.txt\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      ")/geolocation.txt\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "4/geolocation.txt\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "/Calllod Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "1/geolocation.txt\n",
-      "/IS1/ifconfig.txt\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Phone Number.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "/Contacs Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "(SMS) Dump #2.txt\n",
-      "lllog Dump #2.txt\n",
-      "hone/ifconfig.txt\n",
-      "e geolocation.txt\n",
-      "Contacts Dump.txt\n",
-      "(SMS) Dump #1.txt\n",
-      "lllog Dump #1.txt\n",
-      ")/IS/ifconfig.txt\n",
-      "Contacts Dump.txt\n",
-      "Contacts Dump.txt\n",
-      "/IS2/ifconfig.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "6/geolocation.txt\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "/IS1/ifconfig.txt\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "(SMS) Dump #2.txt\n",
-      "/IS1/ifconfig.txt\n",
-      "Contacts Dump.txt\n",
-      "(SMS) Dump #1.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "1/Geolocation.txt\n",
-      "/phone number.txt\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "3/geolocation.txt\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "(SMS) Dump #2.txt\n",
-      "/IS1/ifconfig.txt\n",
-      "Contacts Dump.txt\n",
-      "(SMS) Dump #1.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "/IS2/ifconfig.txt\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n",
-      "Contacts Dump.txt\n",
-      "es (SMS) Dump.txt\n",
-      "/Calllog Dump.txt\n",
-      "yay\n"
+      "Top 5 most popular outgoing numbers are :\n",
+      "Number : 7006348792 Name : masroor Country : India ==> 189\n",
+      "Number : 123 Name : null Country : India ==> 215\n",
+      "Number : +917780809871 Name : adal bhat Country : India ==> 237\n",
+      "Number : 0933637039 Name : جدي ندى Country : Turkey ==> 250\n",
+      "Number : 00966550326715 Name : null Country : Yemen ==> 264\n"
      ]
     }
    ],
    "source": [
+    "arr = sorted(outgoing.items(), key=operator.itemgetter(1))[-5:]\n",
+    "arr1 = sorted(incoming.items(), key=operator.itemgetter(1))[-5:]\n",
     "\n",
-    "\n",
-    "for root, dirs, files in os.walk(directory):\n",
-    "    for file in files:\n",
-    "        if file.endswith(\".txt\"):\n",
-    "            name = os.path.join(root,file)\n",
-    "            print(os.path.join(root, file)[-17:])\n",
-    "            if name[-17:] == '/Calllog Dump.txt':\n",
-    "                \n"
+    "print(\"Top 5 most popular outgoing numbers are :\")\n",
+    "for key,value in arr:\n",
+    "    \n",
+    "    print(\"Number : \" + key[0] + \" Name : \" + key[1] + \" Country : \" + key[2] + \" ==> \" + str(value))\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>1 Part(c)</h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 5 most popular incoming numbers are :\n",
+      "Number : +917780809871 Name : adal bhat Country : India ==> 104\n",
+      "Number : +963997421993 Name : هتلر Country : Syria ==> 130\n",
+      "Number : +917780848045 Name : musaib dhurani Country : India ==> 159\n",
+      "Number : MTN Name : null Country : Syria ==> 229\n",
+      "Number : Syriatel Name : null Country : Syria ==> 367\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Top 5 most popular incoming numbers are :\")\n",
+    "for key,value in arr1:\n",
+    "    \n",
+    "    print(\"Number : \" + key[0] + \" Name : \" + key[1] + \" Country : \" + key[2] + \" ==> \" + str(value))\n",
+    "    "
    ]
   },
   {
